--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@ body {
     color: $textColorDark;
     //new dark theme color
 
-    background-image: url('/assets/img/bgs/bg26.webp');
+    background-image: url("/assets/img/bgs/bg26.webp");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
